[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=1]

[node name="Welcome" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.0
margin_top = 142.0
margin_right = 225.0
margin_bottom = 190.0
text = "Welcome to Canning Season"
align = 1

[node name="Instructions" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -137.0
margin_top = 248.0
margin_right = 137.0
margin_bottom = 262.0
text = "You must connect to other devices to play."

[node name="CreateServerButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -54.0
margin_top = 348.0
margin_right = 54.0
margin_bottom = 368.0
text = "Create a server"

[node name="JoinServerButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.0
margin_top = 388.0
margin_right = 46.0
margin_bottom = 408.0
text = "Join A Server"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CreateServerButton" to="." method="_on_CreateServer_pressed"]
[connection signal="pressed" from="JoinServerButton" to="." method="_on_JoinServer_pressed"]
